# EYE_AD8221

./: ARCHITECTURE.md  CMakeLists.txt  DATAFLOW.md  Kconfig  README.rst  command  prj.conf  prj_minimal.conf  rtt_go.jlink  serial_tool.port
boards/: nrf52dk_nrf52810.overlay
scripts/: build_flash.ps1
src/: emg_ble_stream.c  emg_ble_stream.h  emg_notch.c  emg_notch.h  emg_sampler.c  emg_sampler.h  emg_uart_stream.c  emg_uart_stream.h  fatal_hook.c  main.c
